<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D6A4F"
    android:clipChildren="false"
    android:clipToPadding="false">


    <Button
        android:id="@+id/btn_back_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:layout_margin="16dp"
        android:backgroundTint="#1B4332"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/coins_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Coins: 100"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_back_menu"
        app:layout_constraintEnd_toStartOf="@id/btn_rules"/>

    <Button
        android:id="@+id/btn_rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:layout_margin="16dp"
        android:backgroundTint="#1B4332"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    <LinearLayout
        android:id="@+id/dealer_hand"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="144dp"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/current_pile"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/dealer_hand"
        app:layout_constraintBottom_toTopOf="@id/player_hand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/current_pile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_play_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Play Again"
        android:visibility="gone"
        android:backgroundTint="#1B4332"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/current_pile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/dealer_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dealer: 0"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/dealer_hand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/player_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Player: 0"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/player_hand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="20dp"/>

    <LinearLayout
        android:id="@+id/player_hand"
        android:layout_width="wrap_content"
        android:layout_height="190dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:clipChildren="false"
        android:clipToPadding="false"/>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/pass"
            android:backgroundTint="#1B4332"/>

        <Button
            android:id="@+id/btn_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play"
            android:backgroundTint="#1B4332"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>